--- a/STEMsalaries/STEMsalaries.csproj
+++ b/STEMsalaries/STEMsalaries.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="1.7.0-preview.final" />
-    <PackageReference Include="Microsoft.ML.LightGbm" Version="1.6.0" />
+    <PackageReference Include="Microsoft.ML.LightGbm" Version="1.7.0-preview.final" />
   </ItemGroup>
 </Project>
