--- a/STEMsalaries.Web/STEMsalaries.Web.csproj
+++ b/STEMsalaries.Web/STEMsalaries.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.ML" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Extensions.ML" Version="2.0.0-preview.22313.1" />
   </ItemGroup>
 
   <ItemGroup>
