--- a/STEMsalaries/STEMsalaries.csproj
+++ b/STEMsalaries/STEMsalaries.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.7.0-preview.final" />
-    <PackageReference Include="Microsoft.ML.LightGbm" Version="1.7.0-preview.final" />
+    <PackageReference Include="Microsoft.ML" Version="2.0.0-preview.22313.1" />
+    <PackageReference Include="Microsoft.ML.LightGbm" Version="2.0.0-preview.22313.1" />
   </ItemGroup>
 </Project>
