--- a/STEMsalariesModelBuilder/STEMsalariesModelBuilder.csproj
+++ b/STEMsalariesModelBuilder/STEMsalariesModelBuilder.csproj
@@ -6,19 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.7.0-preview.final" />
-    <PackageReference Include="Microsoft.ML.FastTree" Version="1.7.0-preview.final" />
-    <PackageReference Include="Microsoft.ML.LightGbm" Version="1.7.0-preview.final" />
+    <PackageReference Include="Microsoft.ML" Version="2.0.0-preview.22313.1" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="2.0.0-preview.22313.1" />
+    <PackageReference Include="Microsoft.ML.LightGbm" Version="2.0.0-preview.22313.1" />
   </ItemGroup>
-  <ItemGroup Label="MLModelBuildermbconfig">
-    <None Include="MLModelBuildermbconfig.consumption.cs">
-      <DependentUpon>MLModelBuildermbconfig.mbconfig</DependentUpon>
+  <ItemGroup Label="STEMSalary">
+    <None Include="STEMSalary.consumption.cs">
+      <DependentUpon>STEMSalary.mbconfig</DependentUpon>
     </None>
-    <None Include="MLModelBuildermbconfig.training.cs">
-      <DependentUpon>MLModelBuildermbconfig.mbconfig</DependentUpon>
+    <None Include="STEMSalary.training.cs">
+      <DependentUpon>STEMSalary.mbconfig</DependentUpon>
     </None>
-    <None Include="MLModelBuildermbconfig.zip">
-      <DependentUpon>MLModelBuildermbconfig.mbconfig</DependentUpon>
+    <None Include="STEMSalary.zip">
+      <DependentUpon>STEMSalary.mbconfig</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
